cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-invalid-offsetof")
project(SwathProfiles)
find_package(PCL 1.3 REQUIRED COMPONENTS)
include_directories(${PCL_INCLUDE_DIRS} ../../ ../../TNT/)
link_directories(${PCL_LIBRARY_DIRS} ../../)
add_definitions(${PCL_DEFINITIONS})
add_executable(get_terraces_from_shapefile.out ../get_terraces_from_shapefile.cpp ../../LSDRaster.cpp ../../LSDIndexRaster.cpp ../../LSDFlowInfo.cpp ../../LSDStatsTools.cpp ../../LSDCloudRaster.cpp ../../LSDSwathProfile.cpp ../../LSDShapeTools.cpp ../../LSDJunctionNetwork.cpp ../../LSDTerrace.cpp ../../LSDIndexChannel.cpp ../../LSDChannel.cpp ../../LSDMostLikelyPartitionsFinder.cpp ../../LSDParameterParser.cpp ../../LSDSpatialCSVReader.cpp)
target_link_libraries(get_terraces_from_shapefile.out ${PCL_LIBRARIES})
